# PhotoClassifiersApp

./: CMakeLists.txt  MainWindow.qml  main.cpp  main.qml
Backend/includes/: AlbumPresenter.h  AppListModel.h  ApplicationController.h  FileNamesContainer.h  LoggingController.h  PhotoFactory.h  PhotoObject.h  RenamingEngine.h  Settings.h
Backend/srcs/: AlbumPresenter.cpp  AppListModel.cpp  ApplicationController.cpp  FileNamesContainer.cpp  LoggingController.cpp  PhotoFactory.cpp  PhotoObject.cpp  RenamingEngine.cpp  Settings.cpp
